--- a/views/accesstoken.ejs
+++ b/views/accesstoken.ejs
@@ -1,23 +1,67 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
     <html lang="en">
         <head>
         <meta charset="UTF-8">
             <meta name="viewport" content = "width=device-width, initial-scale=1.0">
                 <meta http - equiv="X-UA-Compatible" content = "ie=edge">
                     <title>Varda Gaming API - Your API token </title>
-         <link rel = "stylesheet" href = "style.css">
+         
+    <!-- Favicon  -->
+    <link rel="icon" href="assets/img/favicon.png">
+
+    <!-- ***** All CSS Files ***** -->
+
+    <!-- Style css -->
+    <link rel="stylesheet" href="assets/css/style.css">
+
+    <!-- Responsive css -->
+    <link rel="stylesheet" href="assets/css/responsive.css">
+
          </head>
          <body>
-         <h1>Your API token is:</h1>
-         <p style='border: 1px solid black; padding:5px;'><%= locals.token %></p>
-         <div style="height:20px"></div>
-         <h3>API request example:</h3>
-         <p style='border: 1px solid grey; padding:5px; color:darkgrey;'>
-            POST /new HTTP/1.1<br />
-            Host: api.varda.vision<br />
-            Accept: application/json<br />
-            Content-Type: application/json<br />
-            Authorization: Bearer {<%= locals.token %>}
-            </p>
+            <section id="home" class="section bg-overlay overflow-hidden d-flex align-items-center">
+                <div class="container">
+                    <div class="row align-items-center">
+                        <!-- Welcome Intro Start -->
+                        <div class="col-12 col-md-6">
+                            <div class="welcome-intro">
+                                <h1 class="text-white text-center text-md-left">Your <br> <span class="fw-4">API token</span></h1>
+                                <p class="text-white text-center text-md-left my-4">
+                                    <%= locals.token %>
+                                </p>
+                                <h3>API request params for adding unlockable:</h3>
+                                <p class="text-white text-center text-md-left my-4">
+                                    POST https://api.varda.vision/new/tokenId/CID/link/<br />
+                                    Host: https://api.varda.vision/<br />
+                                    Accept: application/json<br />
+                                    Content-Type: application/json<br />
+                                    Authorization: Bearer {<%= locals.token %>}
+                                </p>
+                                <p class="text-white text-center text-md-left my-4">
+                                Example:<br />
+                                -https://api.varda.vision/new/tokenId/ /www.example.com (no https:// in the link)<br />
+                                -https://api.varda.vision/new/tokenId/bafybeicxzkrtddcn6d6bdbitty3lfe2jtbrxyfrzknodgo2h2fqtnbrqpe/ (empty space in the link)
+                                </p>
+                            </div>
+                        </div>
+                        <div class="col-12 col-md-6">
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+
+    <!-- jQuery(necessary for all JavaScript plugins) -->
+    <script src="assets/js/jquery/jquery-3.5.1.min.js"></script>
+
+    <!-- Bootstrap js -->
+    <script src="assets/js/bootstrap/popper.min.js"></script>
+    <script src="assets/js/bootstrap/bootstrap.min.js"></script>
+
+    <!-- Plugins js -->
+    <script src="assets/js/plugins/plugins.min.js"></script>
+
+    <!-- Active js -->
+    <script src="assets/js/active.js"></script>
          </body>
     </html>
